[project]
name = "case-monitoring-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "flagembedding==1.3.5",
    "numpy==2.4.0",
    "pgvector==0.4.2",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "sqlalchemy==2.0.45",
    "testcontainers==4.13.3",
]
