[project]
name = "case-monitoring-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "numpy",
    "pgvector",
    "python-dotenv",
    "requests",
    "scikit-learn",
    "scipy",
    "sqlalchemy",
    "testcontainers",
    "llama-cpp-python",
    "torch>=2.10.0",
]
